improve addNumberField